<resources>
    <string name="app_name">TrueLove</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">Ваше имя</string>
    <string name="second_name">Имя половинки)</string>
    <string name="home">Домой</string>
    <string name="history">History</string>
    <string name="calculate">Считать</string>
    <string name="_100_percent">Сто процентов</string>
    <string name="try_again">Попробовать снова</string>
    <string name="are_you_sure_to_delete_this">Are you sure to delete this from history</string>
    <string name="and">and</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="ok">ok</string>
    <string name="time_of_creation">time of creation</string>
</resources>