<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="24dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_result"
            android:layout_width="340dp"
            android:layout_height="240dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/img_lovesecond"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_result" />

        <ImageView
            android:id="@+id/img_heart"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="12dp"
            android:src="@drawable/png_plus"
            app:layout_constraintEnd_toEndOf="@id/tv_firstname"
            app:layout_constraintStart_toStartOf="@id/tv_firstname"
            app:layout_constraintTop_toBottomOf="@id/tv_firstname" />

        <TextView
            android:id="@+id/tv_secondname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/second_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_heart" />

        <ImageView
            android:id="@+id/img_heart2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/img_heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_secondname" />

        <TextView
            android:id="@+id/tv_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100_percent"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/img_heart2"
            app:layout_constraintEnd_toEndOf="@id/img_heart2"
            app:layout_constraintStart_toStartOf="@id/img_heart2"
            app:layout_constraintTop_toTopOf="@id/img_heart2" />

        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue_light"
            android:text="@string/try_again"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/img_heart2"
            app:layout_constraintStart_toStartOf="@id/img_heart2"
            app:layout_constraintTop_toBottomOf="@id/img_heart2" />

        <LinearLayout
            android:id="@+id/container_home"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="56dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:src="@drawable/img_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_history"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/img_history"
                android:layout_width="56dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_diagram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>